# pop-launcher-plugin-docker

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  justfile  plugin-ps.ron  plugin.ron  shell.nix
plugins/docker/: plugin.ron
plugins/docker-ps/: plugin.ron
src/: container.rs  docker.rs  main.rs  plugin.rs
test/: compose.yaml
test/data/: docker_ps.ron
